# ChangeLog for x11-libs/libXScrnSaver
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXScrnSaver/ChangeLog,v 1.46 2008/01/31 04:17:33 dberkholz Exp $

  31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -libXScrnSaver-1.1.0.ebuild:
  Clean up.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libXScrnSaver-1.1.2.ebuild:
  Stable on sparc wrt #175465

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> libXScrnSaver-1.1.2.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> libXScrnSaver-1.1.2.ebuild:
  Stable on mips, per #175465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> libXScrnSaver-1.1.2.ebuild:
  Stable for HPPA (bug #175465).

  12 May 2007; nixnut <nixnut@gentoo.org> libXScrnSaver-1.1.2.ebuild:
  Stable on ppc wrt bug 175465

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  libXScrnSaver-1.1.2.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> libXScrnSaver-1.1.2.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> libXScrnSaver-1.1.2.ebuild:
  Stable on ia64 wrt bug #175465.

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> libXScrnSaver-1.1.2.ebuild:
  Stable on ppc64; bug #175465

  21 Apr 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  -libXScrnSaver-1.1.1.ebuild:
  Drop unused version.

*libXScrnSaver-1.1.2 (16 Dec 2006)

  16 Dec 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXScrnSaver-1.1.2.ebuild:
  Version bump for 7.2.  Build/dist fix only.

*libXScrnSaver-1.1.1 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +libXScrnSaver-1.1.1.ebuild:
  Version bump.

  01 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  libXScrnSaver-1.1.0.ebuild:
  libXext has a runtime dep on xextproto now, so we don't need to depend on it
  here.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> libXScrnSaver-1.1.0.ebuild:
  Stable on hppa.
