@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libXv
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXv/ChangeLog,v 1.38 2008/01/31 04:28:40 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXv/ChangeLog,v 1.39 2008/03/18 04:15:55 dberkholz Exp $
+
+*libXv-1.0.4 (18 Mar 2008)
+
+  18 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +libXv-1.0.4.ebuild:
+  Bump.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -libXv-1.0.1.ebuild:
   Clean up.
