@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libxkbfile
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxkbfile/ChangeLog,v 1.38 2008/01/31 04:33:34 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libxkbfile/ChangeLog,v 1.39 2008/03/18 04:15:00 dberkholz Exp $
+
+*libxkbfile-1.0.5 (18 Mar 2008)
+
+  18 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +libxkbfile-1.0.5.ebuild:
+  Bump.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   -libxkbfile-1.0.3.ebuild:
